tests/compile-fail/integration__integration__general__func_param_named_after_reg.snap
---
source: tests/integration/general.rs
expression: stderr
---
error: unexpected token `REG`
   ┌─ <input>:25:22
   │
25 │         void foo(int REG[100]) {}
   │                      ^^^ unexpected token
   │
   = 
     Expected one of ")", ",", ";", "anim", "case", "default", "ecli", "entry", "mapfile", "script" or IDENT


